# Duty-Tracker

./: .gitignore  README.md  check_db.py  duty_tracker.db  pyproject.toml  test_import.py
app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
static/css/: styles.css
static/js/: app.js
templates/: assignments.html  base.html  dashboard.html  fairness.html  personnel.html  posts.html  shifts.html
tests/: __init__.py
