[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duty-tracker"
version = "0.1.0"
description = "Military duty assignment tracking system with fairness monitoring"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.5.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.6",
  "aiosqlite>=0.19.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "requests>=2.32.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.25.0",
  "pytest-cov>=4.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.1.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.25.0",
  "pytest-cov>=4.0.0",
]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
